--- a/myapp/templates/myapp/form.html
+++ b/myapp/templates/myapp/form.html
@@ -12,7 +12,7 @@
     <form method="POST">
         {% csrf_token %}
 
-        {{ form }}
+        {{ form.as_p }}
 
         <button type="submit">Salvar</button>
     </form>
