--- a/myapp/templates/myapp/listagem.html
+++ b/myapp/templates/myapp/listagem.html
@@ -9,8 +9,11 @@
     <h2>Listagem</h2>
     <ul>
     {% for conta in contas %}
-        <li>{{ conta.email }} - {{ conta.dataCriacao }} - {{ conta.password }}</li>
+        <li><a href="{% url 'atualizar_Login' conta.id %}">
+            {{ conta.email }} - {{ conta.dataCriacao }} - {{ conta.password }}</a></li>
     {% endfor %}
     </ul>
+
+    <a href="{% url 'novo_Login' %}">Novo</a>
 </body>
 </html>
